sps.py implemented

--- a/temp.ipynb
+++ b/temp.ipynb
@@ -7,21 +7,17 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import sys\n",
     "import pandas as pd\n",
     "import scanpy as sc\n",
     "import math\n",
-    "import anndata2ri\n",
-    "from rpy2.robjects import r\n",
-    "from rpy2.robjects.conversion import localconverter\n",
     "from GenSA import *\n",
     "import scipy\n",
     "from scipy.optimize import dual_annealing\n",
     "from annoy import AnnoyIndex\n",
     "import random\n",
     "from igraph import *\n",
-    "from sklearn.preprocessing import normalize\n",
-    "import sys\n",
-    "import leidenalg"
+    "from sklearn.preprocessing import normalize"
    ]
   },
   {
@@ -376,24 +372,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": 453,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 453,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(subsamples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 454,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "a\n",
+      "b\n"
      ]
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
